Added Lint suppression to Library code